@@ -1,5 +1,0 @@
-The source code can be found here:
-
-  http://python-irclib.sourceforge.net
-
-Copyright: LGPL version 2.  See /usr/share/common-licenses/LGPL.
