@@ -1,6 +1,0 @@
-dccreceive
-dccsend
-irccat
-irccat2
-servermap
-testbot.py
