@@ -1,61 +1,0 @@
-#!/usr/bin/make -f
-
-#export DH_VERBOSE=1
-
-export DH_COMPAT=3
-
-build: build-stamp
-build-stamp:
-	dh_testdir
-	$(MAKE) setup.py
-	python2.3 setup.py build
-	touch build-stamp
-
-clean:
-	dh_testdir
-	dh_testroot
-	-rm -f build-stamp
-	$(MAKE) setup.py
-	python2.3 setup.py clean
-	$(MAKE) clean
-	dh_clean
-
-# Build architecture-independent files here.
-binary-indep: build
-#	dh_testversion
-	dh_testdir
-	dh_testroot
-	dh_clean -k
-	dh_installdirs
-
-	python2.3 setup.py install --root=debian/python-irclib
-	find debian/python-irclib -name '*.py[co]' -exec rm {} \;
-#	cp irclib.py ircbot.py debian/python-irclib/usr/lib/python2.3/site-packages
-
-	dh_installdocs
-	dh_installexamples
-	dh_installmenu
-#	dh_installinit
-	dh_installcron
-	dh_installmanpages
-#	dh_undocumented
-	dh_installchangelogs ChangeLog
-	dh_strip
-	dh_compress
-	dh_fixperms
-
-	dh_installdeb
-	dh_shlibdeps
-	dh_gencontrol
-#	dh_makeshlibs
-	dh_md5sums
-	dh_builddeb
-
-binary-arch: build
-# We have nothing to do by default.
-
-source diff:
-	@echo >&2 'source and diff are obsolete - use dpkg-source -b'; false
-
-binary: binary-indep binary-arch
-.PHONY: build clean binary-indep binary-arch binary
